tests/sources/invalid/types/semantic_unary_minus_undefined.fire
// Semantic type error: unary minus operand type cannot be determined
// (undefined identifier).

void unary_minus_undefined() {
    int32 x = -undefinedValue;  //~ ERROR FS-PARSE-0003 @16
}
